@@ -1,3 +1,8 @@
+2004-02-18  Werner Koch  <wk@gnupg.org>
+
+	* assuan-handler.c (assuan_get_data_fp): Fail with ENOSYS if we
+	can't implement this.
+
 2004-02-15  Werner Koch  <wk@gnupg.org>
 
 	* memrchr.c (memrchr): Fixed implementation. Taken from gpgme.
