@@ -1,6 +1,9 @@
 Noteworthy changes in version 0.6.4
 ------------------------------------------------
 
+ * Will now also build on systems not providing funopen or
+   fopencookie.
+
 
 Noteworthy changes in version 0.6.3 (2004-01-29)
 ------------------------------------------------
